--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Properties/launchSettings.json
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/Properties/launchSettings.json
@@ -9,8 +9,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
-      "commandLineArgs": "/seed",
+      "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
