--- a/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/IdentityServer.csproj
+++ b/samples/Quickstarts/9_Combined_AspId_and_EFStorage/src/IdentityServer/IdentityServer.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.76" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
